using System;
using Grpc.Net.Client;

namespace BlazorFrontend.Data
{
    public class DartThrow
    { 
        public double xCoord;
        public double yCoord;
        public double distanceToCenter;
        public bool hitTheBoard;
        public int multiplicator;
        public double angle;
        public int pointSlot;
        public int points;

    }

}
